Ajout images et petit changement

--- a/siteweb.html
+++ b/siteweb.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Coeur & Pattes</title>
-  <link rel="icon" type="image/x-icon" href="assets/images/logo.jpg">
+  <link rel="icon" type="image/x-icon" href="assets/image/logo.jpg">
   <meta name="description" content="Spa animalier — soins, bien-être, détente et toilettage pour vos compagnons." />
   <link rel="stylesheet" href="style.css">
 </head>
@@ -41,10 +41,10 @@
       <div class="hero-card">
         <div class="pill">✨ Ambiance relaxante</div>
         <div class="hero-grid" aria-label="Soins animaliers">
-          <img src="assets/images/chien_massage.jpg" alt="Chien profitant d'un massage" />
-          <img src="assets/images/chat_relaxant.jpg" alt="Chat relaxé sur une serviette" />
-          <img src="assets/images/chien_bain.jpeg" alt="Chien dans un bain moussant" />
-          <img src="assets/images/soin-chat.jpg" alt="Chat en soin bien-être" />
+          <img src="assets/image/chien_massage.jpg" alt="Chien profitant d'un massage" />
+          <img src="assets/image/chat_relaxant.jpg" alt="Chat relaxé sur une serviette" />
+          <img src="assets/image/chien_bain.jpeg" alt="Chien dans un bain moussant" />
+          <img src="assets/image/soin-chat.jpg" alt="Chat en soin bien-être" />
         </div>
       </div>
     </section>
@@ -102,10 +102,10 @@
         <h2 class="section-title">Galerie</h2>
         <p class="section-sub">Un aperçu de nos petits clients détendus et heureux.</p>
         <div class="gallery" role="list">
-          <img role="listitem" src="assets/images/chien_massage.jpg" alt="Chien sur une table de spa" />
-          <img role="listitem" src="assets/images/chat_relaxant.jpg" alt="Chat se reposant sur une serviette" />
-          <img role="listitem" src="assets/images/chien_bain.jpeg" alt="Chien couvert d'une serviette" />
-          <img role="listitem" src="assets/images/soin-chat.jpg" alt="Chat profitant d'un soin" />
+          <img role="listitem" src="assets/image/chien_massage.jpg" alt="Chien sur une table de spa" />
+          <img role="listitem" src="assets/image/chat_relaxant.jpg" alt="Chat se reposant sur une serviette" />
+          <img role="listitem" src="assets/image/chien_bain.jpeg" alt="Chien couvert d'une serviette" />
+          <img role="listitem" src="assets/image/soin-chat.jpg" alt="Chat profitant d'un soin" />
         </div>
       </div>
     </section>
