Co-authored-by: Daifuku420 <Daifuku420@users.noreply.github.com>

--- a/siteweb.html
+++ b/siteweb.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Coeur & Pattes</title>
-  <link rel="icon" type="image/x-icon" href="assets/images/logo.jpg">
+  <link rel="icon" type="image/x-icon" href="assets/image/logo.jpg">
   <meta name="description" content="Spa animalier — soins, bien-être, détente et toilettage pour vos compagnons." />
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,6 +13,7 @@
   <header>
     <div class="container nav">
       <a href="#" class="brand" aria-label="Accueil Coeur et pattes">
+        <img class="logo" src="assets/image/logo.jpg" alt="Logo Coeur et Pattes : un chien et un chat formant un cœur avec leurs corps" />
         <span class="label">Coeur & Pattes</span>
       </a>
       <nav aria-label="Navigation principale">
