--- a/siteweb.html
+++ b/siteweb.html
@@ -13,7 +13,6 @@
   <header>
     <div class="container nav">
       <a href="#" class="brand" aria-label="Accueil Coeur et pattes">
-        <img class="logo" src="assets/image/logo.jpg" alt="Logo Coeur et Pattes : un chien et un chat formant un cœur avec leurs corps" />
         <span class="label">Coeur & Pattes</span>
       </a>
       <nav aria-label="Navigation principale">
@@ -44,7 +43,7 @@
         <div class="hero-grid" aria-label="Soins animaliers">
           <img src="assets/image/chien_massage.jpg" alt="Chien profitant d'un massage" />
           <img src="assets/image/chat_relaxant.jpg" alt="Chat relaxé sur une serviette" />
-          <img src="assets/image/chien_bain.jpeg" alt="Chien dans un bain moussant" />
+          <img src="assets/image/chien-bain.jpeg" alt="Chien dans un bain moussant" />
           <img src="assets/image/soin-chat.jpg" alt="Chat en soin bien-être" />
         </div>
       </div>
@@ -105,7 +104,7 @@
         <div class="gallery" role="list">
           <img role="listitem" src="assets/image/chien_massage.jpg" alt="Chien sur une table de spa" />
           <img role="listitem" src="assets/image/chat_relaxant.jpg" alt="Chat se reposant sur une serviette" />
-          <img role="listitem" src="assets/image/chien_bain.jpeg" alt="Chien couvert d'une serviette" />
+          <img role="listitem" src="assets/image/chien-bain.jpeg" alt="Chien couvert d'une serviette" />
           <img role="listitem" src="assets/image/soin-chat.jpg" alt="Chat profitant d'un soin" />
         </div>
       </div>
