Renamed image file from .jpeg to .jpg

--- a/siteweb.html
+++ b/siteweb.html
@@ -43,7 +43,7 @@
         <div class="hero-grid" aria-label="Soins animaliers">
           <img src="assets/image/chien_massage.jpg" alt="Chien profitant d'un massage" />
           <img src="assets/image/chat_relaxant.jpg" alt="Chat relaxé sur une serviette" />
-          <img src="assets/image/chien-bain.jpeg" alt="Chien dans un bain moussant" />
+          <img src="assets/image/chien-bain.jpg" alt="Chien dans un bain moussant" />
           <img src="assets/image/soin-chat.jpg" alt="Chat en soin bien-être" />
         </div>
       </div>
