--- a/siteweb.html
+++ b/siteweb.html
@@ -15,6 +15,7 @@
       <a href="#" class="brand" aria-label="Accueil Coeur et pattes">
         <span class="label">Coeur & Pattes</span>
       </a>
+      <img src="assets/image/logo.jpg" alt="Logo Coeur et pattes" class="logo" />
       <nav aria-label="Navigation principale">
         <ul>
           <li><a href="#soins">Nos soins</a></li>
