--- a/siteweb.html
+++ b/siteweb.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Coeur & Pattes</title>
-  <link rel="icon" type="image/x-icon" href="assets/image/logo.jpg">
+  <link rel="icon" type="image/x-icon" href="assets/image/logo.png">
   <meta name="description" content="Spa animalier — soins, bien-être, détente et toilettage pour vos compagnons." />
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,9 +13,9 @@
   <header>
     <div class="container nav">
       <a href="#" class="brand" aria-label="Accueil Coeur et pattes">
+        <img src="assets/image/logo.png" alt="Logo Coeur et pattes" class="logo" />
         <span class="label">Coeur & Pattes</span>
       </a>
-      <img src="assets/image/logo.jpg" alt="Logo Coeur et pattes" class="logo" />
       <nav aria-label="Navigation principale">
         <ul>
           <li><a href="#soins">Nos soins</a></li>
