--- a/siteweb.html
+++ b/siteweb.html
@@ -18,10 +18,11 @@
       </a>
       <nav aria-label="Navigation principale">
         <ul>
-          <li><a href="#soins">Nos soins</a></li>
-          <li><a href="#services">Services bien-être</a></li>
-          <li><a href="#galerie">Galerie</a></li>
+          <li><a href="#soins" class="cta">Nos soins</a></li>
+          <li><a href="#services" class="cta">Services bien-être</a></li>
+          <li><a href="#galerie" class="cta">Galerie</a></li>
           <li><a href="#contact" class="cta">Prendre rendez-vous</a></li>
+          <li><a href="#prix" class="cta">Nos prix</a></li>
         </ul>
       </nav>
     </div>
@@ -105,7 +106,7 @@
         <div class="gallery" role="list">
           <img role="listitem" src="assets/image/chien_massage.jpg" alt="Chien sur une table de spa" />
           <img role="listitem" src="assets/image/chat_relaxant.jpg" alt="Chat se reposant sur une serviette" />
-          <img role="listitem" src="assets/image/chien-bain.jpeg" alt="Chien couvert d'une serviette" />
+          <img role="listitem" src="assets/image/chien-bain.jpg" alt="Chien couvert d'une serviette" />
           <img role="listitem" src="assets/image/soin-chat.jpg" alt="Chat profitant d'un soin" />
         </div>
       </div>
