Co-authored-by: Daifuku420 <Daifuku420@users.noreply.github.com>

--- a/siteweb.html
+++ b/siteweb.html
@@ -22,6 +22,7 @@
           <li><a href="#services">Services bien-être</a></li>
           <li><a href="#galerie">Galerie</a></li>
           <li><a href="#contact" class="cta">Prendre rendez-vous</a></li>
+          <li><a href="#prix" class="btn">Prix</a></li>
         </ul>
       </nav>
     </div>
