ajout prix + commencement redirection page tarifs

--- a/siteweb.html
+++ b/siteweb.html
@@ -22,7 +22,7 @@
           <li><a href="#services" class="cta">Services bien-être</a></li>
           <li><a href="#galerie" class="cta">Galerie</a></li>
           <li><a href="#contact" class="cta">Prendre rendez-vous</a></li>
-          <li><a href="#prix" class="cta">Nos prix</a></li>
+          <li><a href="#prix" class="cta">Nos Tarifs</a></li>
         </ul>
       </nav>
     </div>
@@ -38,15 +38,6 @@
         <div class="actions">
           <a class="cta" href="#soins">Découvrir nos soins</a>
           <a class="btn" href="#contact">Réserver une séance</a>
-        </div>
-      </div>
-      <div class="hero-card">
-        <div class="pill">✨ Ambiance relaxante</div>
-        <div class="hero-grid" aria-label="Soins animaliers">
-          <img src="assets/image/chien_massage.jpg" alt="Chien profitant d'un massage" />
-          <img src="assets/image/chat_relaxant.jpg" alt="Chat relaxé sur une serviette" />
-          <img src="assets/image/chien-bain.jpg" alt="Chien dans un bain moussant" />
-          <img src="assets/image/soin-chat.jpg" alt="Chat en soin bien-être" />
         </div>
       </div>
     </section>
