--- a/siteweb.html
+++ b/siteweb.html
@@ -22,7 +22,7 @@
           <li><a href="#services" class="cta">Services bien-être</a></li>
           <li><a href="#galerie" class="cta">Galerie</a></li>
           <li><a href="#contact" class="cta">Prendre rendez-vous</a></li>
-          <li><a href="#prix" class="cta">Nos Tarifs</a></li>
+          <li><a href="tarifs.html" class="cta">Nos Tarifs</a></li>
         </ul>
       </nav>
     </div>
