--- a/siteweb.html
+++ b/siteweb.html
@@ -13,17 +13,16 @@
   <header>
     <div class="container nav">
       <a href="#" class="brand" aria-label="Accueil Coeur et pattes">
-        <img src="assets/image/logo.png" alt="Logo Coeur et pattes" class="logo" />
-        <span class="label">Coeur & Pattes</span>
-      </a>
-      <nav aria-label="Navigation principale">
         <ul>
-          <li><a href="#soins" class="cta">Nos soins</a></li>
-          <li><a href="#services" class="cta">Services bien-être</a></li>
-          <li><a href="#galerie" class="cta">Galerie</a></li>
-          <li><a href="#contact" class="cta">Prendre rendez-vous</a></li>
+        <li><a href="#contact" class="cta">Réserver</a></li>
           <li><a href="#prix" class="cta">Nos Tarifs</a></li>
         </ul>
+          <img src="assets/image/logo.png" alt="Logo Coeur et pattes" class="logo" />
+          <ul>
+          <li><a href="#contact" class="cta">Nous contacter</a></li>
+          </ul>
+      </a>
+      <nav aria-label="Navigation principale">
       </nav>
     </div>
   </header>
