ajout redirection tarif

--- a/siteweb.html
+++ b/siteweb.html
@@ -15,7 +15,7 @@
       <a href="#" class="brand" aria-label="Accueil Coeur et pattes">
         <ul>
         <li><a href="#contact" class="cta">Réserver</a></li>
-          <li><a href="#prix" class="cta">Nos Tarifs</a></li>
+          <li><a href="tarifs.html" class="cta">Nos Tarifs</a></li>
         </ul>
           <img src="assets/image/logo.png" alt="Logo Coeur et pattes" class="logo" />
           <ul>
