Co-authored-by: Daifuku420 <Daifuku420@users.noreply.github.com>

--- a/siteweb.html
+++ b/siteweb.html
@@ -13,17 +13,13 @@
   <header>
     <div class="container nav">
       <a href="#" class="brand" aria-label="Accueil Coeur et pattes">
-        <ul>
-        <li><a href="#contact" class="cta">Réserver</a></li>
-          <li><a href="#prix" class="cta">Nos Tarifs</a></li>
-        </ul>
-          <img src="assets/image/logo.png" alt="Logo Coeur et pattes" class="logo" />
-          <ul>
-          <li><a href="#contact" class="cta">Nous contacter</a></li>
-          </ul>
+      <li><a href="#reservation" class="cta">Réserver</a></li>
+      <li><a href="#prix" class="cta">Nos Tarifs</a></li>
+      <img src="assets/image/logo.png" alt="Logo Coeur et pattes" class="logo" />
+      <li><a href="#contact" class="cta">Nous contacter</a></li>
+      <li><a href="galerie" class="cta">Galerie</a></li>
       </a>
-      <nav aria-label="Navigation principale">
-      </nav>
+      <nav aria-label="Navigation principale"></nav>
     </div>
   </header>
 
@@ -31,6 +27,7 @@
     <!-- Hero -->
     <section class="hero container" id="accueil">
       <div>
+        <h1 class ="center container">Coeur et pattes</h1>
         <div class="kicker">Spa & bien-être animalier</div>
         <h1>Détente, soins et douceur pour vos compagnons</h1>
         <p class="lead">Chez <strong>Coeur et pattes</strong>, nous offrons une expérience de bien-être unique : toilettage, massages, balnéothérapie et soins adaptés à chaque animal.</p>
@@ -102,11 +99,10 @@
       </div>
     </section>
 
-    <!-- Contact -->
-    <section id="contact">
+    <!-- Réservation -->
+    <section id="reservation">
       <div class="container">
-        <h2 class="section-title">Nous contacter</h2>
-        <p class="section-sub">Réservez une séance ou posez-nous vos questions.</p>
+        <h2 class="section-title">Faire une réservation</h2>
         <form action="#" method="post" aria-label="Formulaire de contact">
           <div class="form-row">
             <div>
@@ -125,6 +121,7 @@
                 <option>Massage</option>
                 <option>Balnéothérapie</option>
                 <option>Toilettage</option>
+                <option>Spa aromathérapie</option>
                 <option>Autre</option>
               </select>
             </div>
@@ -141,6 +138,18 @@
             <button class="cta" type="submit">Envoyer</button>
           </div>
         </form>
+      </div>
+    </section>
+    <!-- Contact -->
+    <section id="contact">
+      <div class="container">
+        <h2 class="section-title">Nous contacter</h2>
+        <p class="section-sub">Des questions ? N'hésitez pas à nous écrire.</p>
+        <div class="contact-info">
+          <p><strong>Adresse :</strong> 123 Rue des Animaux, 75000 Paris</p>
+          <p><strong>Téléphone :</strong> 01 23 45 67 89</p>
+          <p><strong>Email :</strong>
+        </div>
       </div>
     </section>
   </main>
