--- a/siteweb.html
+++ b/siteweb.html
@@ -14,10 +14,10 @@
     <div class="container nav">
       <a href="#" class="brand" aria-label="Accueil Coeur et pattes">
       <li><a href="#reservation" class="cta">Réserver</a></li>
-      <li><a href="#prix" class="cta">Nos Tarifs</a></li>
+      <li><a href="tarifs.html" class="cta">Nos Tarifs</a></li>
       <img src="assets/image/logo.png" alt="Logo Coeur et pattes" class="logo" />
       <li><a href="#contact" class="cta">Nous contacter</a></li>
-      <li><a href="galerie" class="cta">Galerie</a></li>
+      <li><a href="#galerie" class="cta">Galerie</a></li>
       </a>
       <nav aria-label="Navigation principale"></nav>
     </div>
