--- a/tarifs.html
+++ b/tarifs.html
@@ -29,32 +29,39 @@
         <thead>
           <tr style="background:rgba(148,163,184,.15);">
             <th>Service</th>
-            <th>Prix</th>
+            <th>Prix Chien</th>
+            <th>Prix Chat</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Bain & séchage (petit chien)</td>
+            <td>Bain & séchage (petit)</td>
             <td>25€</td>
+            <td>—</td>
           </tr>
           <tr>
-            <td>Bain & séchage (grand chien)</td>
+            <td>Bain & séchage (grand)</td>
             <td>35€</td>
+            <td>—</td>
           </tr>
           <tr>
-            <td>Toilettage complet (petit chien)</td>
+            <td>Toilettage complet (petit)</td>
             <td>40€</td>
+            <td>—</td>
           </tr>
           <tr>
-            <td>Toilettage complet (grand chien)</td>
+            <td>Toilettage complet (grand)</td>
             <td>55€</td>
+            <td>—</td>
           </tr>
           <tr>
-            <td>Toilettage chat</td>
+            <td>Toilettage</td>
+            <td>—</td>
             <td>30€</td>
           </tr>
           <tr>
             <td>Coupe griffes</td>
+            <td>10€</td>
             <td>10€</td>
           </tr>
         </tbody>
@@ -71,3 +78,4 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
+</html>
