--- a/siteweb.html
+++ b/siteweb.html
@@ -26,7 +26,7 @@
   <main>
     <!-- Hero -->
     <section class="hero container" id="accueil">
-      <div>
+        <img src="assets/image/chien.jpg" alt="Chien et chat heureux" class="imgarriere" />
         <h1 class ="center container">Coeur et pattes</h1>
         <div class="kicker">Spa & bien-être animalier</div>
         <h1>Détente, soins et douceur pour vos compagnons</h1>
@@ -35,7 +35,6 @@
           <a class="cta" href="#soins">Découvrir nos soins</a>
           <a class="btn" href="#contact">Réserver une séance</a>
         </div>
-      </div>
     </section>
 
     <!-- Soins -->
