--- a/siteweb.html
+++ b/siteweb.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/x-icon" href="assets/image/logo.png">
   <meta name="description" content="Spa animalier — soins, bien-être, détente et toilettage pour vos compagnons." />
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <!-- Header -->
@@ -150,6 +151,7 @@
           <p><strong>Téléphone :</strong> 01 23 45 67 89</p>
           <p><strong>Email :</strong>
         </div>
+      <a href="https://www.instagram.com/coeur.et.pattes?igsh=MWV1NThhenVqMWl5eg==" class="fa fa-instagram"></a> 
       </div>
     </section>
   </main>
