ajout tarif + css du tarif

--- a/tarifs.html
+++ b/tarifs.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>Tarifs Toilettage</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styletarif.css">
 </head>
 <body>
   <header>
@@ -29,39 +29,76 @@
         <thead>
           <tr style="background:rgba(148,163,184,.15);">
             <th>Service</th>
-            <th>Prix Chien</th>
-            <th>Prix Chat</th>
+            <th>Tarif</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Bain & séchage (petit)</td>
-            <td>25€</td>
-            <td>—</td>
+            <td colspan="2" style="font-weight:bold;background:rgba(148,163,184,.07);">Toilettage</td>
           </tr>
           <tr>
-            <td>Bain & séchage (grand)</td>
-            <td>35€</td>
-            <td>—</td>
-          </tr>
-          <tr>
-            <td>Toilettage complet (petit)</td>
+            <td>Petit chien &lt;10kg</td>
             <td>40€</td>
-            <td>—</td>
           </tr>
           <tr>
-            <td>Toilettage complet (grand)</td>
-            <td>55€</td>
-            <td>—</td>
+            <td>Moyen chien 10-25kg</td>
+            <td>50€</td>
           </tr>
           <tr>
-            <td>Toilettage</td>
-            <td>—</td>
+            <td>Grand chien 25-45kg</td>
+            <td>70€</td>
+          </tr>
+          <tr>
+            <td>Très grand chien &gt;45kg</td>
+            <td>90€</td>
+          </tr>
+          <tr>
+            <td>Chat</td>
+            <td>50€</td>
+          </tr>
+          <tr>
+            <td colspan="2" style="font-weight:bold;background:rgba(148,163,184,.07);">Massage</td>
+          </tr>
+          <tr>
+            <td>Petit chien/chat (30 min)</td>
+            <td>35€</td>
+          </tr>
+          <tr>
+            <td>Moyen chien (40 min)</td>
+            <td>45€</td>
+          </tr>
+          <tr>
+            <td>Grand chien (50 min)</td>
+            <td>65€</td>
+          </tr>
+          <tr>
+            <td colspan="2" style="font-weight:bold;background:rgba(148,163,184,.07);">Balnéothérapie</td>
+          </tr>
+          <tr>
+            <td>Séance unique</td>
+            <td>50€</td>
+          </tr>
+          <tr>
+            <td>Forfait 5 séances</td>
+            <td>220€</td>
+          </tr>
+          <tr>
+            <td>Forfait 10 séances</td>
+            <td>400€</td>
+          </tr>
+          <tr>
+            <td colspan="2" style="font-weight:bold;background:rgba(148,163,184,.07);">Aromathérapie</td>
+          </tr>
+          <tr>
+            <td>Séance découverte + application</td>
             <td>30€</td>
           </tr>
           <tr>
-            <td>Coupe griffes</td>
-            <td>10€</td>
+            <td>Forfait 5 séances</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>Vente de produits</td>
             <td>10€</td>
           </tr>
         </tbody>
