--- a/siteweb.html
+++ b/siteweb.html
@@ -37,6 +37,10 @@
         </div>
     </section>
 
+    <div class="divblanche">
+
+    </div>
+
     <!-- Soins -->
     <section id="soins">
       <div class="container">
