--- a/siteweb.html
+++ b/siteweb.html
@@ -34,7 +34,7 @@
         <p class="lead">Chez <strong>Coeur et pattes</strong>, nous offrons une expérience de bien-être unique : toilettage, massages, balnéothérapie et soins adaptés à chaque animal.</p>
         <div class="actions">
           <a class="cta" href="#soins">Découvrir nos soins</a>
-          <a class="btn" href="#contact">Réserver une séance</a>
+          <a class="btn" href="#reservation">Réserver une séance</a>
         </div>
     </section>
 
@@ -54,11 +54,6 @@
             <p>Techniques douces adaptées aux chiens et chats pour soulager le stress et améliorer la circulation.</p>
           </article>
           <article class="card">
-            <span class="badge">Balnéo</span>
-            <h3>Balnéothérapie</h3>
-            <p>Bains tièdes aux vertus apaisantes pour détendre les muscles et favoriser la récupération.</p>
-          </article>
-          <article class="card">
             <span class="badge">Beauté</span>
             <h3>Toilettage complet</h3>
             <p>Coupe, brossage et soins du pelage avec des produits naturels respectueux de la peau.</p>
@@ -74,16 +69,14 @@
         <p class="section-sub">Pour un équilibre parfait entre santé et sérénité.</p>
         <div class="grid">
           <div class="card">
+            <span class="badge">Aroma</span>
             <h3>Spa aromathérapie</h3>
             <p>Ambiance parfumée aux huiles essentielles adaptées aux animaux pour une détente maximale.</p>
           </div>
           <div class="card">
-            <h3>Soin des coussinets</h3>
-            <p>Hydratation et protection des pattes pour prévenir les irritations et sécheresses.</p>
-          </div>
-          <div class="card">
-            <h3>Programme bien-être</h3>
-            <p>Séances personnalisées combinant plusieurs soins pour répondre aux besoins spécifiques de chaque animal.</p>
+            <span class="badge">Balnéo</span>
+            <h3>Balnéothérapie</h3>
+            <p>Bains tièdes aux vertus apaisantes pour détendre les muscles et favoriser la récupération.</p>
           </div>
         </div>
       </div>
