--- a/siteweb.html
+++ b/siteweb.html
@@ -103,17 +103,17 @@
         <form action="#" method="post" aria-label="Formulaire de contact">
           <div class="form-row">
             <div>
-              <label for="name">Nom</label>
+              <label class="section-sub" for="name">Nom</label>
               <input id="name" name="name" type="text" placeholder="Votre nom" required>
             </div>
             <div>
-              <label for="email">Email</label>
+              <label class="section-sub" for="email">Email</label>
               <input id="email" name="email" type="email" placeholder="vous@exemple.fr" required>
             </div>
           </div>
           <div class="form-row">
             <div>
-              <label for="service">Service souhaité</label>
+              <label class="section-sub" for="service">Service souhaité</label>
               <select id="service" name="service">
                 <option>Massage</option>
                 <option>Balnéothérapie</option>
@@ -123,7 +123,7 @@
               </select>
             </div>
             <div>
-              <label for="phone">Téléphone</label>
+              <label class="section-sub" for="phone">Téléphone</label>
               <input id="phone" name="phone" type="tel" placeholder="06 12 34 56 78">
             </div>
           </div>
@@ -143,9 +143,9 @@
         <h2 class="section-title">Nous contacter</h2>
         <p class="section-sub">Des questions ? N'hésitez pas à nous écrire.</p>
         <div class="contact-info">
-          <p><strong>Adresse :</strong> 123 Rue des Animaux, 75000 Paris</p>
-          <p><strong>Téléphone :</strong> 01 23 45 67 89</p>
-          <p><strong>Email :</strong>
+          <p class="section-sub"><strong>Adresse :</strong> 123 Rue des Animaux, 75000 Paris</p>
+          <p class="section-sub"><strong>Téléphone :</strong> 01 23 45 67 89</p>
+          <p class="section-sub"><strong>Email :</strong> coeur&pattes@gmail.com</p>
         </div>
       <a href="https://www.instagram.com/coeur.et.pattes?igsh=MWV1NThhenVqMWl5eg==" class="fa fa-instagram"></a> 
       </div>
