--- a/siteweb.html
+++ b/siteweb.html
@@ -92,6 +92,10 @@
           <img role="listitem" src="assets/image/chat_relaxant.jpg" alt="Chat se reposant sur une serviette" />
           <img role="listitem" src="assets/image/chien-bain.jpg" alt="Chien couvert d'une serviette" />
           <img role="listitem" src="assets/image/soin-chat.jpg" alt="Chat profitant d'un soin" />
+          <img role="listitem" src="assets/image/toilettage-chien-bain.jpg" alt="Chien après un toilettage" />
+          <img role="listitem" src="assets/image/Tout-savoir-sur-la-profession-de-toiletteur-pour-chats-1024x683.png" alt="Chat recevant un massage" />
+          <img role="listitem" src="assets/image/devenir-toiletteur-canin-a-domicile.jpg" alt="Chien et chat ensemble" />
+          <img role="listitem" src="assets/image/chat-veto.jpg" alt="Chien allongé et détendu" />
         </div>
       </div>
     </section>
