--- a/siteweb.html
+++ b/siteweb.html
@@ -119,7 +119,6 @@
                 <option>Balnéothérapie</option>
                 <option>Toilettage</option>
                 <option>Spa aromathérapie</option>
-                <option>Autre</option>
               </select>
             </div>
             <div>
@@ -128,7 +127,7 @@
             </div>
           </div>
           <div>
-            <label for="message">Message</label>
+            <label class="section-sub" for="message">Message</label>
             <textarea id="message" name="message" placeholder="Votre message..."></textarea>
           </div>
           <div class="actions">
