--- a/siteweb.html
+++ b/siteweb.html
@@ -88,14 +88,14 @@
         <h2 class="section-title">Galerie</h2>
         <p class="section-sub">Un aperçu de nos petits clients détendus et heureux.</p>
         <div class="gallery" role="list">
-          <img role="listitem" src="assets/image/chien_massage.jpg" alt="Chien sur une table de spa" />
-          <img role="listitem" src="assets/image/chat_relaxant.jpg" alt="Chat se reposant sur une serviette" />
-          <img role="listitem" src="assets/image/chien-bain.jpg" alt="Chien couvert d'une serviette" />
-          <img role="listitem" src="assets/image/chat-toilette.png" alt="Chat profitant d'un soin" />
-          <img role="listitem" src="assets/image/toilettage-chien-bain.jpg" alt="Chien après un toilettage" />
-          <img role="listitem" src="assets/image/Tout-savoir-sur-la-profession-de-toiletteur-pour-chats-1024x683.png" alt="Chat recevant un massage" />
-          <img role="listitem" src="assets/image/devenir-toiletteur-canin-a-domicile.jpg" alt="Chien et chat ensemble" />
-          <img role="listitem" src="assets/image/chaaat.jpeg" alt="Chien allongé et détendu" />
+          <img class="imggalerie" role="listitem" src="assets/image/chien_massage.jpg" alt="Chien sur une table de spa" />
+          <img class="imggalerie" role="listitem" src="assets/image/chat_relaxant.jpg" alt="Chat se reposant sur une serviette" />
+          <img class="imggalerie" role="listitem" src="assets/image/chien-bain.jpg" alt="Chien couvert d'une serviette" />
+          <img class="imggalerie" role="listitem" src="assets/image/chat-toilette.png" alt="Chat profitant d'un soin" />
+          <img class="imggalerie" role="listitem" src="assets/image/toilettage-chien-bain.jpg" alt="Chien après un toilettage" />
+          <img class="imggalerie" role="listitem" src="assets/image/Tout-savoir-sur-la-profession-de-toiletteur-pour-chats-1024x683.png" alt="Chat recevant un massage" />
+          <img class="imggalerie" role="listitem" src="assets/image/devenir-toiletteur-canin-a-domicile.jpg" alt="Chien et chat ensemble" />
+          <img class="imggalerie" role="listitem" src="assets/image/chaaat.jpeg" alt="Chien allongé et détendu" />
         </div>
       </div>
     </section>
